# src/adapter/clienteController.ts
@@ -3,9 +3,16 @@ import { clienteInDatabaseRepository } from "./clienteInDatabaseRepository";
 const clienteController = Router();
 
 // Defina as rotas e manipuladores de rota aqui
-clienteController.get(
-  "/cliente/:clienteCpf",
-  async (req: Request, res: Response) => {
+clienteController
+  .get("/cliente/", async (req: Request, res: Response) => {
+    try {
+      const cliente = await new clienteInDatabaseRepository().findAll();
+      res.status(200).json(cliente);
+    } catch (error) {
+      res.status(400).json({ message: error });
+    }
+  })
+  .get("/cliente/:clienteCpf", async (req: Request, res: Response) => {
     try {
       const { clienteCpf } = req.params;
 
@@ -16,7 +23,6 @@ clienteController.get(
     } catch (error) {
       res.status(400).json({ message: error });
     }
-  }
-);
+  });
 
 export default clienteController;
